# DownloadManager

./: CMakeLists.txt  DownloadManager.pro  LICENSE  README.md  downloaditem.cpp  main.cpp  preferencesdialog.cpp
.github/workflows/: Qt_Test_Build.yml  Qt_Test_Build_Ubuntu.yml  Qt_Test_Build_Windows.yml  build-and-release.yml
src/: aboutdialog.cpp  aboutdialog.h  downloaditem.cpp  downloaditem.h  downloadmanager.cpp  downloadmanager.h  downloadsegment.cpp  downloadsegment.h  downloadstatus.cpp  downloadstatus.h  downloadutils.cpp  downloadutils.h  downloadworker.cpp  downloadworker.h  main.cpp  mainwindow.cpp  mainwindow.h  preferences.cpp  preferences.h  preferencesdialog.cpp  preferencesdialog.h
workflows/: build-and-release.yml  test.yml
